--- a/about.css
+++ b/about.css
@@ -1,3 +1,8 @@
+menu {
+     height: 60px;
+     background-color:#666;
+}
+
 nav{ background-color: #4682b4
      margin: 15px;
      height: 35px;
