--- a/topic.css
+++ b/topic.css
@@ -1,5 +1,5 @@
 h2 { 
-  font-size: 120%;
+  font-size: 100%;
   color:olive;}
 
 
@@ -11,7 +11,7 @@ ul{
     
 
     aside {
-  background-color: #4682b4;
+  background-color:#F5DEB3	;
   font-size: 105%;
   width: 300px;
 }
