--- a/index.css
+++ b/index.css
@@ -1,4 +1,22 @@
+
+ul{
+ font-family: seri;
+ font-size: 100%;
+ color: #8B008B;
+}
+
+aside{
+ background-color:#4B0082;
+ margin: 20px;
+ border-radius: 5px;
+ padding: 30px;
+ font-size:105%;
+ float:right;
+ width: 200px;
+} 
+ 
 h1 {
  font-size: 120%;
  color:#4682b4;
  }
+
