--- a/topic.css
+++ b/topic.css
@@ -20,4 +20,5 @@ img {
   width:320px;
   float: center;
   border-radius: 5px;
-  
+  margin-left: 10px; margin-right: 10px; margin-top: 0px; margin-bottom: 10px;
+}
