--- a/about.css
+++ b/about.css
@@ -3,14 +3,14 @@ menu {
      background-color:#666;
 }
 
-nav{ background-color: #4682b4
+nav{ background-color: #ffe4e1;
      margin: 15px;
      height: 35px;
      border-radius: 5px;
      padding: 15px; }
      
   aside{ 
-  background-color:#F5DEB3
+  background-color:#ffe4e1;
   margin: 20px;
   border-radius: 5px;
   padding: 20px;
